--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -3,23 +3,46 @@ name: Makefile CI
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
-
+    name: Build and Test
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
 
     - name: Install dependencies
       run: make install
 
-    - name: Run test
+    - name: Run tests
       run: make test
 
-    - name: Run format
+    - name: Format code
       run: make format
 
-    - name: Run lint
+    - name: Lint code
       run: make lint
+
+    - name: Clean up
+      run: make clean
