--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -9,11 +9,11 @@ on:
 jobs:
   build:
     name: Build and Test
-    runs-on: ubuntu-22.04  # Use a compatible OS version
+    runs-on: ubuntu-24.04
 
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12" , "3.13"]
 
     steps:
     - name: Checkout Code
